testsuite/tests/v1/fun_decl/already_existing_symbol/test.out
Error: Symbol declared multiple times
   ╭─[ <working-dir>/script.lkql:2:5 ]
   │
 1 │ fun test() = 1
   │     ──┬─  
   │       ╰─── Hint: Previously declared here
 2 │ fun test() = 1
   │     ──┬─  
   │       ╰─── The symbol "test" already exists in the current scope
───╯
